--- a/result/2022-07-28.md
+++ b/result/2022-07-28.md
@@ -45,4 +45,5 @@
 45. [美联储大概率加息75个基点](https://s.weibo.com//weibo?q=%23%E7%BE%8E%E8%81%94%E5%82%A8%E5%A4%A7%E6%A6%82%E7%8E%87%E5%8A%A0%E6%81%AF75%E4%B8%AA%E5%9F%BA%E7%82%B9%23&Refer=top) 86191
 46. [古茗被曝喝出壁虎](https://s.weibo.com//weibo?q=%23%E5%8F%A4%E8%8C%97%E8%A2%AB%E6%9B%9D%E5%96%9D%E5%87%BA%E5%A3%81%E8%99%8E%23&Refer=top) 76028
 47. [婉拒还不奏效怎么办](https://s.weibo.com//weibo?q=%23%E5%A9%89%E6%8B%92%E8%BF%98%E4%B8%8D%E5%A5%8F%E6%95%88%E6%80%8E%E4%B9%88%E5%8A%9E%23&Refer=top) 67254
-48. [心疼颜淡](https://s.weibo.com//weibo?q=%23%E5%BF%83%E7%96%BC%E9%A2%9C%E6%B7%A1%23&Refer=top) 54270
+48. [心疼颜淡](https://s.weibo.com//weibo?q=%23%E5%BF%83%E7%96%BC%E9%A2%9C%E6%B7%A1%23&Refer=top) 55249
+49. [好想好想谈一场老派的恋爱](https://s.weibo.com//weibo?q=%23%E5%A5%BD%E6%83%B3%E5%A5%BD%E6%83%B3%E8%B0%88%E4%B8%80%E5%9C%BA%E8%80%81%E6%B4%BE%E7%9A%84%E6%81%8B%E7%88%B1%23&Refer=top) 16806
